# py-iam-expand

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pull-request.yml  pypi-release.yml  zizmor.yml
examples/: basic.ipynb  example_policy.json
py_iam_expand/: actions.py  cli.py  policy.py
tests/: actions_test.py  cli_test.py  conftest.py  test_actions.py  test_cli.py  test_policy.py
