[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0"]

[tool.mypy]
allow_redefinition = true
files = ["./py_iam_expand"]
strict = true

# https://peps.python.org/pep-0621/
[tool.poetry]
authors = ["Prowler Team <engineering@prowler.com>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License"
]
description = "This is a Python package to expand and deobfuscate IAM policies."
license = "Apache-2.0"
maintainers = ["Prowler Team <engineering@prowler.com>"]
name = "py-iam-expand"
packages = [
  {include = "py_iam_expand"}
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
pydantic = "1.10.21"
python = ">3.9.1,<3.14"

[tool.poetry.group.dev.dependencies]
bandit = "1.8.3"
black = "25.1.0"
flake8 = "7.1.1"
mypy = "1.15.0"
pylint = "3.3.1"
pytest = "8.3.5"
pytest-cov = "6.0.0"
pytest-env = "1.1.5"
pytest-randomly = "3.16.0"
pytest-xdist = "3.6.1"
requests = "^2.32.3"
ruff = "0.9.10"
safety = "3.2.9"
vulture = "2.14"

[tool.poetry.urls]
"Changelog" = "https://github.com/prowler-cloud/py-iam-expand/releases"
"Documentation" = "https://docs.prowler.cloud"
"Homepage" = "https://github.com/prowler-cloud/py-iam-expand"
"Issue tracker" = "https://github.com/prowler-cloud/py-iam-expand/issues"

[tool.poetry-version-plugin]
source = "init"